# TimeGAN

./: .gitignore
.devcontainer/: devcontainer.json
timegan/: model.py  pyproject.toml  test.ipynb
